fix: prevent nav menu item clipping on hover
Add overflow visible and margin to last menu item to prevent
"Datenschutz" from being cropped when hover scale effect is applied.

--- a/themes/kmkh/static/css/layout.css
+++ b/themes/kmkh/static/css/layout.css
@@ -164,6 +164,7 @@ html, body {
         line-height: var(--line-height-regular);
         height: 80px;
         float: right;
+        overflow: visible;
     }
 
     .submenu .date {
@@ -183,6 +184,10 @@ html, body {
         margin: 0;
         margin-left: 30px;
         height: 100%;
+    }
+
+    .navigation ul.mainmenu li:last-child {
+        margin-right: 10px;
     }
 
     nav a {
